Added Swagger models and setup
