# models/apimodels/friends_feed.go
@@ -1,105 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package apimodels
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"strconv"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// FriendsFeed list of Users structure
-//
-// swagger:model friends_feed
-type FriendsFeed struct {
-
-	// friends feed
-	FriendsFeed []*FeedPost `json:"friends_feed"`
-
-	// page state
-	PageState *PaginationData `json:"page_state,omitempty"`
-}
-
-// Validate validates this friends feed
-func (m *FriendsFeed) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateFriendsFeed(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validatePageState(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *FriendsFeed) validateFriendsFeed(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.FriendsFeed) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.FriendsFeed); i++ {
-		if swag.IsZero(m.FriendsFeed[i]) { // not required
-			continue
-		}
-
-		if m.FriendsFeed[i] != nil {
-			if err := m.FriendsFeed[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("friends_feed" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-func (m *FriendsFeed) validatePageState(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.PageState) { // not required
-		return nil
-	}
-
-	if m.PageState != nil {
-		if err := m.PageState.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("page_state")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *FriendsFeed) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *FriendsFeed) UnmarshalBinary(b []byte) error {
-	var res FriendsFeed
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
